# littlebadbot

./: .env.template  .gitignore  bot.py  pyproject.toml  requirements.txt
bot/: commands.py  settings.py  temp_mail.py
